added Parcel and fixed github pages

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "solarisr",
   "version": "1.0.0",
   "description": "SolarisR.web",
-  "homepage": "harchkosoft.github.io/SolarisR",
+  "homepage": "https://harchkosoft.github.io/SolarisR",
   "scripts": {
     "start": "parcel *.html",
     "build": "parcel build *.html --public-url /SolarisR/"
