--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "solarisR.web",
   "homepage": "https://harchkosoft.github.io/SolarisR/",
   "scripts": {
-    "start": "parcel *.html",
+    "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /SolarisR/"
   },
   "repository": {
