--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "url": "https://github.com/harchkosoft/SolarisR/issues"
   },
   "dependencies": {
-    "modern-normalize": "^1.1.0"
+    "modern-normalize": "^1.1.0",
+    "save-dev": "^0.0.1-security",
+    "three": "^0.173.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
-    "parcel": "^2.6.0",
     "parcel-reporter-clean-dist": "^1.0.4",
     "posthtml-include": "^1.7.4"
   },
